# dome-red-spl-registry

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  compile_docker.sh  publish_docker.sh
assets/: addresses.nfo  dome_red_spl_registry-keypair.json  oracle_1-keypair.json  oracle_2-keypair.json  oracle_3-keypair.json  oracle_4-keypair.json  oracle_5-keypair.json
docker/: deploy-spl-registry.sh  docker-compose.yaml  local-deploy-spl-registry.sh  local-solana-run-registry.sh  solana-run-registry.sh  wait-for-solana.sh
docker-compose/: deploy-spl-registry.sh  docker-compose-ci.yaml  solana-run-registry.sh
programs/dome-red-registry/: Cargo.toml
programs/dome-red-registry/src/: errors.rs  lib.rs
programs/dome-red-registry/src/circuits/: circuit.rs  circuits_pool.rs  mod.rs
programs/dome-red-registry/src/oracles/: oracle_account.rs
programs/dome-red-registry/src/proofs/: proof_account.rs
programs/dome-red-spl-registry/: Cargo.toml
programs/dome-red-spl-registry/src/: errors.rs  lib.rs
spl_registry/: Anchor.toml
spl_registry/programs/dome-red-spl-registry/: Cargo.toml
spl_registry/programs/dome-red-spl-registry/src/: errors.rs  lib.rs
spl_registry/programs/dome-red-spl-registry/src/circuits/: circuit.rs  circuit_item.rs  circuits_pool.rs  mod.rs
spl_registry/programs/dome-red-spl-registry/src/oracles/: oracle_account.rs
spl_registry/programs/dome-red-spl-registry/src/proofs/: mod.rs  proof.rs  proof_account.rs
spl_registry/tests/: dome-red-spl-registry.ts
tests/: dome-red-registry.ts  dome-red-spl-registry.ts
(+5 files in other folders)
